# EvilFlowersCatalog

./: .dockerignore  .editorconfig  .env.example  .flake8  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  compose.services.yml  compose.yml  distrobuilder.yaml  docker-compose.yml  manage.py  pyproject.toml  requirements.sh  requirements.txt
.claude/: settings.local.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature-request.md  request-for-clarification.md
.github/scripts/: generate-index.sh
.github/workflows/: build.yml  codesee-arch-diagram.yml  deploy.yml  docker-publish.yml  dockerhub-registry.yml  docs.yml  github-publish.yml  github-registry.yml  lxc-image.yml  lxd-image.yml  tests.yml
apps/api/: decorators.py  encoders.py  errors.py  response.py  urls.py
apps/api/filters/: acquisitions.py  annotations.py  api_keys.py  authors.py  base.py  catalogs.py  categories.py  entries.py  feeds.py  shelf_records.py  user_acquisitions.py  users.py
apps/api/forms/: annotations.py  api_keys.py  catalogs.py  category.py  entries.py  feeds.py  shelf_records.py  tokens.py  user_acquisitions.py  users.py
apps/api/middleware/: api_key.py  exceptions.py  signature.py
apps/api/serializers/: __init__.py  annotation.py  api_keys.py  catalogs.py  entries.py  feeds.py  shelf_records.py  status.py  tokens.py  user_acquisitions.py  users.py
apps/api/services/: catalog.py  entry.py  entry_introspection_service.py
apps/api/views/: acquisitions.py  annotation_items.py  annotations.py  api_keys.py  authors.py  base.py  catalogs.py  categories.py  entries.py  events_test.py  feeds.py  languages.py  shelf_records.py  status.py  tokens.py  user_acquisitions.py  users.py
apps/core/: admin.py  auth.py  checkers.py  errors.py  tasks.py  validators.py  views.py
apps/core/fields/: multirange.py  partial_date.py
apps/core/fixtures/: api_keys.json  users.json
apps/core/management/: compression.py  storage.py
apps/core/managers/: base.py  user.py
apps/core/migrations/: 0001_initial.py  0002_api_keys.py  0002_catalog.py  0002_feed_per_page.py  0003_contributors.py  0003_languages_currencies.py  0004_entries.py  0004_feed_parents.py  0005_authors.py  0005_catalog_is_public.py  0006_entry_images.py  0007_popularity.py  0008_entry_categories.py  0009_removed_native_name.py  0010_remove_legacy_user_catalog.py  0011_user_catalogs.py  0012_identifiers.py  0013_iso_languages.py  0014_auth_source.py  0015_username.py  0016_removed_safe_delete.py  0017_user_acquisitions.py  0018_entry_config_defaults.py  0019_entry_citation_as_text.py  0020_entry_doi_identifier.py  0021_shelfrecord.py  0022_feed_unique_index.py  0023_publishers.py  0024_database_timestamps.py  0025_alter_category_unique_together.py  0026_annotation_items.py  0027_touching.py  0028_entry_authors.py  0029_m2n_unique_constrains.py  0030_indexing.py  0031_alter_acquisition_relation.py
apps/core/models/: __init__.py  acquisition.py  annotation.py  annotation_item.py  api_key.py  auth_source.py  author.py  base.py  catalog.py  category.py  contributor.py  currency.py  entry.py  entry_author.py  feed.py  language.py  price.py  shelf_record.py  user.py  user_acquisition.py  user_catalog.py
apps/core/modifiers/: __init__.py  pdf.py
apps/core/querysets/: base.py
apps/events/: celety_tasks.py  services.py  transformers.py
apps/events/executors/: celery_executor.py  executor.py  kafka_executor.py
apps/events/transformers/: celery_transformer.py  kafka_transformer.py  transformer.py
apps/files/: apps.py  urls.py  views.py
apps/files/storage/: __init__.py  filesystem.py  s3.py
apps/opds/: apps.py  context_processors.py  models.py  schema.py  structures.py  urls.py
apps/opds/services/: entry.py  feeds.py  navigation.py
apps/opds/views/: base.py  catalog.py  entry.py  feed.py  search.py
apps/opds2/: README.md  apps.py
apps/openapi/: __init__.py  analyzers.py  apps.py  decorators.py  schema.py  services.py  types.py  urls.py  views.py
apps/readium/: apps.py  filters.py  forms.py  lcp_client.py  models.py  serializers.py  services.py  tasks.py  urls.py
apps/readium/migrations/: 0001_initial.py  0002_license_content_id_license_device_count_and_more.py
apps/readium/views/: availability.py  download.py  hooks.py  licenses.py
apps/tasks/: apps.py  models.py  tasks.py
apps/tasks/migrations/: 0001_initial.py
apps/worker/: README.md  apps.py  handlers.py  models.py
conf/: entrypoint.sh  supervisor.conf
docs/: EvilFlowersCatalog.mwb  EvilFlowersCatalogApi.yaml  InsomniaCollection.json  Insomnia_EvilFlowers.json  README.md  diagrams.graffle  openapi.yaml
docs/elk/: .env.example  README.md  docker-compose.yml
docs/readium/: README.md  frontend-integration-guide.md
docs/schema/: README.md  evilflowers-opds.xsd  example.xml
evil_flowers_catalog/: asgi.py  celery.py  urls.py  wsgi.py
evil_flowers_catalog/settings/: base.py  development.py  production.py
templates/files/: intro.html  license.html  license.txt
templates/opds/: catalog.xml  entry.xml  feed.xml  root.xml  search.xml
templates/opds/_partials/: entry.xml
templates/opds/feeds/: complete.xml  feed.xml  latest.xml  popular.xml
(+17 files in other folders)
