[tool.poetry]
name = "evil_flowers_catalog"
version = "0.13.0"
description = "Publication catalog compatible with OPDS"
authors = ["Jakub Dubec <jakub.dubec@stuba.sk>"]

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0"
django_api_forms = "1.0.0rc11"
python-dotenv = "^1.0"
argon2-cffi = "^23.1.0"
psycopg = {version = "^3.1", extras = ["c"]}
django-imap-backend = "^0"
django-filter = "^24.3"
redis = "^5.0"
Pillow = "^11"
pycountry = "^24.6.1"
django-object-checker = "^1.0.0"
Authlib = "^1.3"
tzdata = "^2024.1"
django-cors-headers = "^4.3"
python-ldap = "^3.4.0"
pymupdf = { version = "^1.24", optional = true }
minio = { version = "^7.1.12", optional = true }
qrcode = "^7.4"
bibtexparser = "^1.4.0"
isbnlib = "^3.10.14"
django-partial-date = "^1.3.2"
pydantic = "^2.8"
pydantic-xml = { version = "^2.11.0", extras = ["lxml"] }
email-validator = "^2.2"
elastic-apm = { version = "^6.23", optional = true }
sentry-sdk = { version = "^2.0", optional = true }
psutil = { version = "^6.0", optional = true }
hiredis = "^3.0"
celery = {version = "^5.4.0", extras = ["redis"]}
setuptools = "^74.1.2"

[tool.poetry.extras]
s3 = ["minio"]
pdf = ["pymupdf"]
apm = ["elastic-apm", "sentry-sdk", "psutil"]

[tool.poetry.group.docker.dependencies]
gunicorn = "^23.0.0"
wheel = "*"

[tool.poetry.group.dev.dependencies]
black = "^24.0"
datamodel-code-generator = { version = "^0.25.2", extras = ["http"] }

[tool.black]
line-length = 119
target-version = ['py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.github
  | .venv
  | data
  | logs
  | media
  | private
  | static
  | conf
  | \.stoplight
)/
'''

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.masonry.api"
