[tool.poetry]
name = "evil_flowers_catalog"
version = "0.13.0"
description = "Publication catalog compatible with OPDS"
authors = ["Jakub Dubec <jakub.dubec@stuba.sk>"]

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0"
django_api_forms = "1.0.0rc11"
python-dotenv = "^1.0"
argon2-cffi = "^25.1.0"
psycopg = {version = "^3.1", extras = ["c", "pool"]}
django-imap-backend = "^0"
django-filter = "^25.1"
redis = "^5.0"
Pillow = "^11"
pycountry = "^24.6.1"
django-object-checker = "^1.0.0"
Authlib = "^1.5"
tzdata = "^2025.1"
django-cors-headers = "^4.7"
python-ldap = "^3.4.0"
qrcode = "^8.0"
bibtexparser = "^1.4.0"
isbnlib = { git = "https://github.com/EvilFlowersCatalog/isbnlib.git" }
django-partial-date = "^1.3.2"
pydantic = "^2.8"
pydantic-xml = { version = "^2.11.0", extras = ["lxml"] }
email-validator = "^2.2"
hiredis = "^3.0"
celery = {version = "^5.4.0", extras = ["redis"]}
setuptools = "*"
requests = "^2.32.4"

[tool.poetry.group.s3.dependencies]
minio = "^7.2"

[tool.poetry.group.pdf.dependencies]
pymupdf = "^1.26.3"

[tool.poetry.group.apm.dependencies]
elastic-apm = "^6.23"
sentry-sdk = "^2.0"
psutil = "^7.0"
logfire = {extras = ["django", "psycopg", "redis", "requests", "system-metrics"], version = "^4.0.0"}

[tool.poetry.group.docker.dependencies]
gunicorn = "^23.0.0"
gevent = "*"
wheel = "*"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
datamodel-code-generator = { version = "^0.25.2", extras = ["http"] }


[tool.poetry.group.kafka.dependencies]
kafka-python = "^2.1.5"

[tool.black]
line-length = 119
target-version = ['py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.github
  | .venv
  | data
  | logs
  | media
  | private
  | static
  | conf
  | \.stoplight
)/
'''

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.masonry.api"
